--- a/Copy_of_Assignment_1.ipynb
+++ b/Copy_of_Assignment_1.ipynb
@@ -41,22 +41,22 @@
       "metadata": {
         "id": "s07c7JK7Oqt-"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "s.split()"
+        "s.split()\n"
       ],
       "metadata": {
         "id": "6mGVa3SQYLkb",
-        "outputId": "b1efa481-9919-4459-d5b1-888eabe2faab",
+        "outputId": "786588e6-3acc-47d8-8b51-d04b9110be51",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -66,7 +66,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
     },
@@ -90,23 +90,23 @@
       "metadata": {
         "id": "_ZHoml3kPqic"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "'the diameter of {} is {} kilometers.'.format(planet,diameter)"
+        "'the diameter of {} is {} kilometers.'.format(planet,diameter)\n"
       ],
       "metadata": {
         "id": "HyRyJv6CYPb4",
-        "outputId": "0c86a099-08b7-4cae-ea63-e7879d0faee0",
+        "outputId": "4384e172-ce11-4b4d-b5a0-42aa78cd51be",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +119,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -140,23 +140,23 @@
       "metadata": {
         "id": "fcVwbCc1QrQI"
       },
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "d['k1'][3]['tricky'][3]['target'][3]"
+        "d['k1'][3][\"tricky\"][3]['target'][3]"
       ],
       "metadata": {
         "id": "MvbkMZpXYRaw",
-        "outputId": "571675fa-0503-4a98-ce8b-f1e1e81cf71e",
+        "outputId": "b67a27e9-155f-4853-9e31-497b74b804e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -169,7 +169,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 6
         }
       ]
     },
@@ -190,7 +190,7 @@
       "metadata": {
         "id": "LLiE_TYrhA1O"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -210,12 +210,12 @@
       ],
       "metadata": {
         "id": "NHrirmgCYXvU",
-        "outputId": "c0d0528c-f412-4cee-ea7f-4ca71f826a83",
+        "outputId": "5c76238a-e885-4633-e051-b798792b5277",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -225,33 +225,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 8
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "np.zeros(10)*5"
+        "np.ones(10)*5"
       ],
       "metadata": {
         "id": "e4005lsTYXxx",
-        "outputId": "400f1317-9560-41ac-c134-e70dffffef4f",
+        "outputId": "3e78e857-d042-4af5-d100-b4b3a77b928a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+              "array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5.])"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 9
         }
       ]
     },
@@ -271,12 +271,12 @@
       ],
       "metadata": {
         "id": "oAI2tbU2Yag-",
-        "outputId": "fd821e59-f0b7-4932-b140-2d8c359ca28e",
+        "outputId": "769e9ba6-bbef-452d-9f23-10adbe50734d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -286,7 +286,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 11
         }
       ]
     },
@@ -306,12 +306,12 @@
       ],
       "metadata": {
         "id": "tOlEVH7BYceE",
-        "outputId": "b8133178-c11c-4ce1-de3c-fd2650acf598",
+        "outputId": "94074b76-a998-4797-e292-66a7b5720794",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +323,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -345,13 +345,13 @@
         "np.concatenate((a,b))"
       ],
       "metadata": {
-        "id": "rAPSw97aYfE0",
-        "outputId": "f95bf148-6973-4c0a-ef66-a19832667913",
+        "id": "Bl_ILDVhAxF5",
+        "outputId": "f16a5720-baac-46b8-eaa2-091211008e3e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -361,9 +361,18 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 14
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rAPSw97aYfE0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -391,7 +400,7 @@
       "metadata": {
         "id": "T5OxJRZ8uvR7"
       },
-      "execution_count": 18,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -403,13 +412,13 @@
       ],
       "metadata": {
         "id": "xNpI_XXoYhs0",
-        "outputId": "63f45216-c808-4659-f8cd-ad8151f6bb7e",
+        "outputId": "9aa2723a-47e8-4508-a8a3-b32ca3bfccfe",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 144
+          "height": 143
         }
       },
-      "execution_count": 19,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +431,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a7bf9f93-a898-4b92-955c-11df18eb2e7e\">\n",
+              "  <div id=\"df-0bebd684-906f-4271-9dbf-0f51e7332b21\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -465,7 +474,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a7bf9f93-a898-4b92-955c-11df18eb2e7e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0bebd684-906f-4271-9dbf-0f51e7332b21')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -516,12 +525,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a7bf9f93-a898-4b92-955c-11df18eb2e7e button.colab-df-convert');\n",
+              "          document.querySelector('#df-0bebd684-906f-4271-9dbf-0f51e7332b21 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a7bf9f93-a898-4b92-955c-11df18eb2e7e');\n",
+              "          const element = document.querySelector('#df-0bebd684-906f-4271-9dbf-0f51e7332b21');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -544,7 +553,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 16
         }
       ]
     },
@@ -564,12 +573,12 @@
       ],
       "metadata": {
         "id": "dgyC0JhVYl4F",
-        "outputId": "0f010743-b1e1-45e7-a0e7-3d9c1f000c9d",
+        "outputId": "6640b7fc-4c49-4c0c-e6e6-9bce4b087951",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -590,7 +599,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 17
         }
       ]
     },
@@ -615,7 +624,7 @@
       "metadata": {
         "id": "_XMC8aEt0llB"
       },
-      "execution_count": 21,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -625,13 +634,13 @@
       ],
       "metadata": {
         "id": "knH76sDKYsVX",
-        "outputId": "ed7efc41-029b-495b-e013-1380209d42f1",
+        "outputId": "98d53742-a267-4249-de02-688d3da609af",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 144
+          "height": 143
         }
       },
-      "execution_count": 22,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -644,7 +653,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6c58f47c-4661-4422-85b8-a93fc1366776\">\n",
+              "  <div id=\"df-ab2c489b-08e8-4c4b-8695-a946e0c525ce\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -691,7 +700,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6c58f47c-4661-4422-85b8-a93fc1366776')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ab2c489b-08e8-4c4b-8695-a946e0c525ce')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -742,12 +751,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6c58f47c-4661-4422-85b8-a93fc1366776 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ab2c489b-08e8-4c4b-8695-a946e0c525ce button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6c58f47c-4661-4422-85b8-a93fc1366776');\n",
+              "          const element = document.querySelector('#df-ab2c489b-08e8-4c4b-8695-a946e0c525ce');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -770,7 +779,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 19
         }
       ]
     }
